--- a/src/components/Auth/auth.module.scss
+++ b/src/components/Auth/auth.module.scss
@@ -1,11 +1,18 @@
 .login {
   form {
-    width: 50%;
+    width: fit-content;
     height: 110px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     margin: auto;
+  }
+  .register {
+    margin-top: 10px;
+    margin-right: auto;
+    color: black;
+    text-decoration: none;
+    font-size: 12px;
   }
 }
